Fixed choice bug